--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,49 @@
 {
-  "extends": "airbnb",
-  "plugins": [
-    "react"
-  ],
   "parser": "babel-eslint",
-  "globals": {
-    "it": false,
-    "before": false,
-    "after": false,
-    "beforeEach": false,
-    "afterEach": false,
-    "describe": false,
-    "stub": false,
-    "spy": false,
-    "mock": false,
-    "clock": false,
-    "ErrorUtils": false,
-    "expect": false,
-    "fail": false
+  "parserOptions": {
+    "sourceType": "module"
   },
+  "plugins": [
+    "prettier",
+    "react-native",
+    "react",
+    "import"
+  ],
+  "extends": [
+    "plugin:react/recommended",
+    "prettier",
+    "prettier/react"
+  ],
   "rules": {
-    "react/jsx-filename-extension": 0,
-    "no-underscore-dangle": 0,
-    "no-console": 0,
-    "react/self-closing-comp": 0,
-    "no-unused-expressions": 0,
-    "max-len": [2, 150, 4, {"ignoreUrls": true}],
-    "new-cap": [2, { "capIsNewExceptions": ["Map", "List", "Stack", "Record"]}],
-    "func-names": 0,
-    "quotes": [2, "double"],
-    "react/jsx-indent-props": [2, 2],
-    "react/jsx-closing-bracket-location": [2, "after-props"],
-    "no-use-before-define": [2, { "functions": false }],
-    "react/prefer-stateless-function": 0,
-    "arrow-body-style": 0,
-    "no-nested-ternary": 0,
-    "react/prop-types": 2
+    "react/display-name": 0,
+    "react/sort-prop-types": [
+      2,
+      { "ignoreCase": true }
+    ],
+    "react/no-deprecated": 0,
+
+    "react-native/no-unused-styles": 2,
+    "react-native/split-platform-components": 1,
+    "react-native/no-inline-styles": 2,
+    "react-native/no-color-literals": 2,
+
+    "import/export": 2,
+    "import/no-named-as-default": 0,
+    "import/no-mutable-exports": 2,
+    "import/no-duplicates": 2,
+    "import/order": [
+      2,
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+        "newlines-between": "always"
+      }
+    ],
+
+    "prettier/prettier": 2
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
